--- a/app/globals.css
+++ b/app/globals.css
@@ -8,12 +8,16 @@
   height: 100%;
 }
 
-.cute{
+.cute,.cute2{
   cursor: pointer;
   transition: .3s;
 }
 .cute:hover,.cute:active{
   transform: translateY(-4px);
+}
+
+.cute2:active{
+  transform: scale(.9)
 }
 
 .tooltip:before {
